syntax = "proto3";

package io.harness.delegate;

option java_multiple_files = true;

import "io/harness/delegate/account.proto";
import "io/harness/delegate/task.proto";

message SendTaskResultRequest {
  TaskId task_id = 1;
  bytes response_data = 2;
}

message SendTaskResultResponse {
  bool acknowledgement = 1;
}